fixes placeholder not showing on ios and left-right scrolling

--- a/src/css/JoinPage.module.css
+++ b/src/css/JoinPage.module.css
@@ -41,7 +41,3 @@
     border: 2px black solid;
     margin: 5%;
 }
-
-::-webkit-input-placeholder {
-    color: black;
-}
